# serial-comm-protocol

./: .gitignore  CMakeLists.txt  CRC.hpp  CommHandle.cpp  CommHandle.hpp  CommandFrame.hpp  README.MD  SerialPort.cpp  SerialPort.hpp
include/: CRC.hpp  CommHandle.hpp  CommandFrame.hpp  Common.h  Common.hpp  Option.hpp  SerialCommHandle.hpp  SerialCommProtocol.hpp  SerialControl.hpp  SerialPort.hpp
include/serial/: CommHandle.hpp  SerialCommHandle.hpp  SerialControl.hpp
include/serial/command/: CRC.hpp  CommandFrame.hpp
include/serial/utils/: Logger.hpp
src/: CommHandle.cpp  CommandFrame.hpp  SerialCommHandle.cpp  SerialControl.cpp  SerialPort.cpp
